--- a/style.css
+++ b/style.css
@@ -152,6 +152,7 @@ body {
         }
 
         #terms-list li {
+          cursor: pointer;
           padding: 10px 15px;
           margin: 5px 0;
           font-weight: 700;
@@ -284,6 +285,7 @@ body {
         flex-direction: column;
         text-align: center;
         padding-top: 2.5rem;
+        padding: 2.5rem 0.5rem;
         h2 {
           color: white;
           margin-bottom: 2rem;
@@ -341,19 +343,26 @@ body {
           box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
           transition: all 0.3s ease;
         }
-       
       }
       section#definition {
-        background-color: rgb(219, 219, 219);
-        padding: 2rem 1rem;
-        display: flex;
-        flex-direction: column;
+        background-color: #201a25;
+        border-top: #5c636a solid 0.5rem;
+        border-bottom: #dc3545 solid 0.5rem;
+        padding: 1rem;
         div#containerTermTechnique {
-          display: flex;
-          align-items: center;
-          flex-direction: column;
-          margin: 5rem 0rem;
+          margin: 1rem 0rem;
           padding: 1rem;
+          background-color: #e9e9e9;
+          border: #cccccc solid 0.5rem;
+          color: #201a25;
+          border-radius: 10px;
+          div#termTechniqueWord {
+            font-size: 2rem;
+            font-weight: 600;
+          }
+          div#termTechniqueDefinition {
+            font-size: 1.5rem;
+          }
         }
       }
     }
